<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Member Details" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/App.Theme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/App.Theme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_phone_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/App.Theme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edSubscriptionFee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_fee"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/App.Theme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edDepositAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_deposit_amount"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/App.Theme.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edLoanAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lbl_Loan_amount"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edDOB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_dob"
                            android:inputType="textPersonName" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnDOB"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1.5"
                        android:background="@drawable/ic_baseline_calendar_month_24"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edDOJ"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_doj"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnDOJ"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1.5"
                        android:background="@drawable/ic_baseline_calendar_month_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edDOM"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_dom"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnDOM"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:background="@drawable/ic_baseline_calendar_month_24"
                        android:layout_weight="1.5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edCaste"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_caste"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edReligion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_religion"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_category"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/App.Theme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edAadharNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lbl_aadhar"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:text="Select Role"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold" />


                <RadioGroup
                    android:id="@+id/selectRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbSecreatary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Secretary" />

                    <RadioButton
                        android:id="@+id/rbMember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Member" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:text="Gender"
                    android:textSize="@dimen/dimen_20"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female" />

                    <RadioButton
                        android:id="@+id/rbOther"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Other" />

                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    style="@style/App.Theme.Button.Pink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_margin"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginEnd="@dimen/standard_margin"
                    android:layout_marginRight="@dimen/standard_margin"
                    android:text="@string/lbl_submit" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>
